scenery/tests/errors/negative-sphere-radius.typ
// expected: sphere radius must be a non-negative number
#import "/lib.typ": sphere
#sphere((0, 0, 0), -1)
